--- a/project/home.html
+++ b/project/home.html
@@ -42,7 +42,7 @@
                 <a href=tutorlogin.html style="margin: auto">
                     <button type="button" class="btn btn-primary btn-lg" >Tutor Login</button>
                 </a>
-                <a href=facultylogin.html style="margin: auto">
+                <a href=admin/index.html style="margin: auto">
                     <button type="button" class="btn btn-primary btn-lg">Faculty Login</button>
                 </a>
             </div>
