--- a/project/studentindex.html
+++ b/project/studentindex.html
@@ -31,7 +31,7 @@
         
         <!-- header -->
         <div ng-include ng-init="menuHighlight = 0;" src="'studentheader.html'"></div>
-            <div class="row" style=" padding-top: 100px">
+            <div class="row" style=" padding-top: 100px" ng-show="isloggedin">
                 <div class="card" style="width: col-med 3; margin: auto">
                     <img class="card-img" src="images/documents.png" alt="Problem Sets">
                 </div>
