--- a/InfoProject-4-24/problemset.html
+++ b/InfoProject-4-24/problemset.html
@@ -3,7 +3,7 @@
 <html lang="en" ng-app="tutor">
 <head>
     <!-- this is what shows up in the tabs in your browser and if you bookmark the page -->
-    <title>CS Tutors-Students</title>
+    <title>CS Tutors-Tutors</title>
 
     <!-- These are the links to bootstrap code -->
     <!-- we got the links from http://getbootstrap.com/docs/4.0/getting-started/introduction/ -->
@@ -34,13 +34,13 @@
             <div class="row" style="padding-top: 75px;margin: auto" ng-show="isloggedin">
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                      <a class="nav-link active" href="problemset.html">Chapter 1</a>
+                      <a class="nav-link active" href="/chapter1">Chapter 1</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="problemset2.html">Chapter 2</a>
+                      <a class="nav-link" href="/chapter2">Chapter 2</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="problemset3.html">Chapter 3</a>
+                      <a class="nav-link" href="/chapter3">Chapter 3</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link disabled" href="/chapter4">Chapter 4</a>
