--- a/tutor/tutorindex.html
+++ b/tutor/tutorindex.html
@@ -33,7 +33,7 @@
             <div class="row" style=" padding-top: 100px">
                 
                 <div class="card" style="width: col-med 3; margin: auto">
-                    <a href="problemset.html"></a><img class="card-img" src="https://www.iconshock.com/image/Sigma/Education/homework" alt="Problem Sets"></a>
+                    <a href="problemset.html"><img class="card-img" src="https://www.iconshock.com/image/Sigma/Education/homework" alt="Problem Sets"></a>
                 </div>
                 <div class="card" style="width: col-med 3;margin: auto">
                     <a href="calander.html"><img class="card-img" src="http://www.cacmp.org/userfiles/2017-06/ae5bbc49-1ba3-4f92-8041-82a5698b02cf.png?width=600" alt="Calendar"></a>
