--- a/home.html
+++ b/home.html
@@ -36,10 +36,10 @@
                 
             </div>
             <div class="row" style="padding-top: 100px">
-                <a href=studentlogin.html style="margin: auto">
+                <a href=student/login.html style="margin: auto">
                     <button type="button" class="btn btn-primary btn-lg" >Student Login</button>
                 </a>
-                <a href=tutorlogin.html style="margin: auto">
+                <a href=tutor/tutorlogin.html style="margin: auto">
                     <button type="button" class="btn btn-primary btn-lg" >Tutor Login</button>
                 </a>
                 <a href=admin/index.html style="margin: auto">
