--- a/home.html
+++ b/home.html
@@ -35,6 +35,7 @@
             <div class="row">
                 
             </div>
+            <!-- go to separate login pages -->
             <div class="row" style="padding-top: 100px">
                 <a href=student/login.html style="margin: auto">
                     <button type="button" class="btn btn-primary btn-lg" >Student Login</button>
