--- a/tutor/calander.html
+++ b/tutor/calander.html
@@ -3,7 +3,7 @@
 <html lang="en" ng-app="tutor">
 <head>
     <!-- this is what shows up in the tabs in your browser and if you bookmark the page -->
-    <title>CS Tutors-Students</title>
+    <title>CS Tutors-Tutor</title>
 
     <!-- These are the links to bootstrap code -->
     <!-- we got the links from http://getbootstrap.com/docs/4.0/getting-started/introduction/ -->
@@ -30,7 +30,7 @@
     <div class="container" ng-controller="dataControl">
         
         <!-- header -->
-        <div ng-include ng-init="menuHighlight = 2;" src="'sheader.html'"></div>     
+        <div ng-include ng-init="menuHighlight = 2;" src="'header.html'"></div>     
     <!-- we are defining the angular controller that we will use in this chunk of html defined by the div as 'dataControl' from data.entertainment.controller.js -->
         <h2>Open Sessions</h2>
         <table class="table">
