--- a/student/calendar.html
+++ b/student/calendar.html
@@ -50,11 +50,7 @@
                     <td>{{time.sessiontime}}</td>
                     <td>{{time.tutorid}}</td>
                     <td>{{time.courseid}}</td>
-                    <td><a href=addreservation.php>
-                        <button type="button" class="btn btn-primary btn-success ng-click=addres(time.sessionid)">Reserve</button>
-                        </a>
-                    </td>
-                    
+                    <td><button type="button" class="btn btn-primary btn-success ng-click=addRes(time.sessionid)">Reserve</button></td>   
                </tr>
         </table>
         <h2>Current Reservations</h2>
@@ -73,9 +69,9 @@
                     <td>{{reservation.sessiontime}}</td>
                     <td>{{reservation.tutorid}}</td>
                     <td>{{reservation.courseid}}</td>
-                    <td><a href=cancelreservation.php>
+                    <td>
                         <button type="button" class="btn btn-primary btn-danger ng-click=cancel(time.reservationid)">Cancel</button>
-                        </a>
+                        
                     </td>
               <!--      <td><form action="cancelreservation.php" method="post"><input type="submit" label="select"></form></td> -->
                </tr>
