--- a/tutor/budget.html
+++ b/tutor/budget.html
@@ -25,13 +25,10 @@
 </head>
 
 <body>
-            <!-- header -->
-
-            
-    <!-- we are defining the angular controller that we will use in this chunk of html defined by the div as 'dataControl' from data.entertainment.controller.js -->
+    <!-- header -->
     <div class="container" ng-controller="dataControl">
-      
-      <div ng-include ng-init="menuHighlight = 3;" src="'header.html'"></div>
+        <!-- header -->
+        <div ng-include ng-init="menuHighlight = 4;" src="'tutorheader.html'"></div>
 
         <table class="table">
                <thead>
