--- a/tutor/notes.html
+++ b/tutor/notes.html
@@ -28,11 +28,11 @@
     <!-- we are defining the angular controller that we will use in this chunk of html defined by the div as 'dataControl' from data.entertainment.controller.js -->
     <div class="container" ng-controller="dataControl">
         <!-- header -->
-        <div ng-include ng-init="menuHighlight = 0;" src="'tutorheader.html'"></div>
-            <div class="container-fluid center-meh-boi">
+        <div ng-include ng-init="menuHighlight = 3;" src="'tutorheader.html'"></div>
+            
        <form>
         <textarea name="message" rows="10" cols="90">
-            Notes from previous session
+        Notes from upcoming sessions
         </textarea>
        </form>
     <button class="btn btn-default" ng-click="" ng-disabled="accountForm.$invalid">Submit</button>
