--- a/tutor/problemset.html
+++ b/tutor/problemset.html
@@ -3,7 +3,7 @@
 <html lang="en" ng-app="tutor">
 <head>
     <!-- this is what shows up in the tabs in your browser and if you bookmark the page -->
-    <title>CS Tutors-Tutor</title>
+    <title>CS Tutors-Students</title>
 
     <!-- These are the links to bootstrap code -->
     <!-- we got the links from http://getbootstrap.com/docs/4.0/getting-started/introduction/ -->
@@ -28,20 +28,15 @@
 <body>
     <!-- we are defining the angular controller that we will use in this chunk of html defined by the div as 'dataControl' from data.entertainment.controller.js -->
     <div class="container" ng-controller="dataControl">
-                <div ng-include ng-init="menuHighlight = 1;" src="'header.html'"></div>
+                <div ng-include ng-init="menuHighlight = 1;" src="'tutorheader.html'"></div>
 
-        <table class="table">
-               <thead>
-                    <tr>
-                        <th>Course</th>
-                        <th>File Name</th>
-                        <th>File</th>
-                    </tr>
-               </thead>
-               <tr ng-repeat="problem in data4.problems | filter:query">
+        <table class="table" ng-repeat="problem in data4.problems | filter:query">
+               <tr >
                     <td>{{problem.courseid}}</td>
-                    <td>{{problem.filename}}</td>
-                    <td class="embed-responsive"><span ng-bind-html="problem.filepdf | trustHtml"></span></td>
+                    <td>{{problem.filename}}</td>           
+               </tr>
+               <tr>
+                <td class="embed-responsive embed-responsive-16by9 style="margin: auto""><span ng-bind-html="problem.filepdf | trustHtml"></span></td>
                </tr>
             </table>
     
