--- a/tutor/newsessions.html
+++ b/tutor/newsessions.html
@@ -49,17 +49,17 @@
                 </div>
                  <h5>Course:</h5>
                 <div class='row' id='classtype'>
-                    <label class="container">CS:110
-                        <input type="checkbox" id="cs1020" value="1">
+                    <label class="container">CS:1010
+                        <input type="radio" id="cs1010" value="CS:1010" ng-model="session.courseid">
                         <span class="checkmark"></span>
                     </label>
                     <label class="container">CS:1210
-                        <input type="checkbox"id="cs1210" value="1">
+                        <input type="radio"id="cs1210" value="CS:1210" ng-model="session.courseid">
                         <span class="checkmark"></span>
                     </label>
                     
                     <label class="container">CS:2110
-                        <input type="checkbox"id="2110" value="1">
+                        <input type="radio"id="2110" value="CS:2110" ng-model="session.courseid">
                         <span class="checkmark"></span>
                     </label>
                     
