final student commit

--- a/student/index.html
+++ b/student/index.html
@@ -58,8 +58,9 @@
                     <td>{{reservation.sessiontime}}</td>
                     <td>{{reservation.tutorid}}</td>
                     <td>{{reservation.courseid}}</td>
-                    <td>
-                        <button type="button" class="btn btn-primary btn-danger" ng-click="cancel(reservation.sessionid)">Cancel</button>
+                    <td><a href=cancelreservation.php>
+                        <button type="button" class="btn btn-primary btn-danger ng-click=cancel(time.reservationid)">Cancel</button>
+                        </a>
                     </td>
               <!--      <td><form action="cancelreservation.php" method="post"><input type="submit" label="select"></form></td> -->
                </tr>
